2009-08-06  Sam Steingold  <sds@gnu.org>

	base modules are always linked statically
	* clisp-link.in (with_dynamic_modules): get from the environment
	with the default being @with_dynamic_modules@
	* makemake.in (base): pass with_dynamic_modules=no to clisp-link

2009-08-06  Sam Steingold  <sds@gnu.org>

	* clisp-link.in (lncp): rename from link to separate from link.sh
	(lncp_some): rename from link_some to simplify search

2009-08-06  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (MAKEFILE_IN): depend on aclocal.m4

2009-08-05  Sam Steingold  <sds@gnu.org>

	* modules/regexp/link.sh.in (NEW_FILES): remove regexp.dvi
	* modules/regexp/Makefile.in (DISTRIBFILES, all): ditto
	* modules/regexp/regexp.dvi: remove

2009-08-05  Sam Steingold  <sds@gnu.org>

	use gnulib in syscalls (just string-time for now)
	* Makefile.devel (MAKEFILE_IN): add modules/syscalls/gllib/Makefile
	* modules/syscalls/Makefile.in (libgnu_sc.a): add target
	* modules/syscalls/calls.c (STRING-TIME): implement unconditionally
	* modules/syscalls/posix.lisp (STRING-TIME): export unconditionally
	* modules/syscalls/configure.in: call sc_gl_EARLY, sc_gl_INIT,
	gl_FUNC_MKTIME, gl_FUNC_GNU_STRFTIME, gl_FUNC_STRPTIME;
	do not check for strftime strptime mktime
	* modules/syscalls/link.sh.in (NEW_FILES): add libgnu_sc.a
	* modules/syscalls/gllib/, modules/syscalls/glm4/: add

2009-08-05  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (gnulib-imported): import no-c++
	* makemake.in (SUBDIRS): disable c++ using NO_CXX for gettimeofday.c
	* configure.in, modules/regexp/configure.in: call gt_NO_CXX
	* modules/regexp/Makefile.in (libgnu_rx.a): pass NO_CXX in CFLAGS
	to gllib because regex cannot be compiled with c++

2009-08-05  Sam Steingold  <sds@gnu.org>

	build modules without linking them over
	* configure: do not link module directories into the build directory
	* makemake.in (anymodule): do not link the module directory,
	run configure in place or link Makefile
	* lndir: remove